/** @jest-environment setup-polly-jest/jest-environment-node */
// See https://netflix.github.io/pollyjs/#/test-frameworks/jest-jasmine?id=supported-test-runners

import NodeHttpAdapter from "@pollyjs/adapter-node-http";
import FSPersister from "@pollyjs/persister-fs";
import nock from "nock";
import * as path from "path";
import { setupPolly } from "setup-polly-jest";
import { getItemById, hnApiBaseUrl } from "../src";

describe("getItemById", () => {
  setupPolly({
    adapters: [NodeHttpAdapter],
    persister: FSPersister,
    persisterOptions: {
      fs: {
        recordingsDir: path.resolve(__dirname, "./__recordings__"),
      },
    },
    recordFailedRequests: true,
  });

  it("returns an existing story item", async () => {
    expect.assertions(4);

    const item = await getItemById({ id: 27107832 });

    expect(item).toBeDefined();
    expect(item!.id).toEqual(27107832);
    expect(item!.author).toEqual("velut");
    expect(item).toMatchSnapshot();
  });

  it("returns an existing comment item", async () => {
    expect.assertions(4);

    const item = await getItemById({ id: 27121843 });

    expect(item).toBeDefined();
    expect(item!.id).toEqual(27121843);
    expect(item!.author).toEqual("velut");
    expect(item).toMatchSnapshot();
  });

  it("returns a deleted item", async () => {
    expect.assertions(4);

    const item = await getItemById({ id: 27121851 });

    expect(item).toBeDefined();
    expect(item!.id).toEqual(27121851);
    expect(item!.deleted).toEqual(true);
    expect(item).toMatchSnapshot();
  });

  it("returns a dead item", async () => {
    expect.assertions(4);

    const item = await getItemById({ id: 29013059 });

    expect(item).toBeDefined();
    expect(item!.id).toEqual(29013059);
    expect(item!.dead).toEqual(true);
    expect(item).toMatchSnapshot();
  });

  it("returns undefined if an item with the given ID is not found", async () => {
    expect.assertions(1);

    const item = await getItemById({ id: 0 });

    expect(item).toBeUndefined();
  });
});

describe("getItemById", () => {
  it("returns an item with only an ID", async () => {
    expect.assertions(3);

    nock(hnApiBaseUrl).get("/item/0.json").reply(200, { id: 0 });

    const item = await getItemById({ id: 0 });

    expect(item!.id).toEqual(0);
    expect(item!.type).toEqual("unknown");
    expect(item).toMatchSnapshot();
  });
});
